--- a/list.html
+++ b/list.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <title>A Magic App</title> -->
+	<title>新窗口</title>
 </head>
 <body>
-	<h2>👋 Hey~</h2>
-	<button id="btn-1">点击打开新窗口</button>
-	<script src="./index.js"></script>
+	<h2>新窗口</h2>
 </body>
 </html>
