--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
 			<button id="btn-1">点击打开新窗口</button>
 		</div>
 	</div>
+
+	<!-- 关闭的弹窗 -->
+	<div class="isClose">
+		<h3>是否关闭当前应用？</h3>
+		<p>系统可能不会保存您的所有更改</p>
+		<p class="close_btn">
+			<span>是</span>
+			<span>否</span>
+		</p>
+	</div>
 </body>
 <script src="./index.js"></script>
 </html>
