--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<div class="topBar">
 			<div class="leftTitle">
 				<img src="./icon/rocket.ico" width="24px" alt="">
-				<div class="title">Magic A11pp</div>
+				<div class="title">Magic App</div>
 			</div>
 			<div class="windowTool">
 				<div class="miniSize">
