--- a/sub.html
+++ b/sub.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 	<h2>新窗口</h2>
+	获取到 WinA 内的数据： <input type="text" id="txt">
 </body>
-</html>·
+<script src="./sub.js"></script>
+</html>
