--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		</div>
 
 		<br>
-		<button class="btn-88">给另一个渲染进程发送消息</button>
+		<button class="btn-88">给另一个渲染 winB 进程发送消息</button>
 		<br>
 
 
