--- a/winB.html
+++ b/winB.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>新窗口</title>
+	<title>WinB</title>
 </head>
 <body>
-	<h2>新窗口</h2>
+	<h2>WinB</h2>
+	获取到 WinA 内的数据： <input type="text" id="txt">
 </body>
+<script src="./winB.js"></script>
 </html>
