--- a/winB.html
+++ b/winB.html
@@ -9,6 +9,8 @@
 <body>
 	<h2>WinB</h2>
 	获取到 WinA 内的数据： <input type="text" id="txt">
+	<br>
+	<button id="btn">发送数据给 WinA</button>
 </body>
 <script src="./winB.js"></script>
 </html>
