--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
 		<iframe src="https://www.36kr.com/" frameborder="0" id="webview"></iframe>
 
 
+		<!-- 消息通知 -->
+		<button id="msgBtn">消息通知</button>
+
 
 		<!-- 主进程与渲染进程的通讯 -->
 		<button class="btn-55">发送异步信息给主进程</button>
