--- a/index.html
+++ b/index.html
@@ -204,11 +204,20 @@
 		</div>
 
 		<!-- Iframe  -->
+		<br>
 		<iframe src="https://www.36kr.com/" frameborder="0" id="webview"></iframe>
 
 
 		<!-- 消息通知 -->
+		<br>
 		<button id="msgBtn">消息通知</button>
+
+
+		<!-- 剪切版 -->
+		<br>
+		<input type="text" id="copyText" placeholder="input sth"><button>复制</button>
+		<br>
+		<input type="text" id="pasteText" placeholder="paste sth"><button>粘贴</button>
 
 
 		<!-- 主进程与渲染进程的通讯 -->
